# sdl3-experiment

./: Cargo.toml  justfile
content/shaders/compiled/dxil/: CustomSampling.frag.dxil  FillTexture.comp.dxil  Fullscreen.vert.dxil  GradientTexture.comp.dxil  LinearToSRGB.comp.dxil  LinearToST2084.comp.dxil  PositionColor.vert.dxil  PositionColorInstanced.vert.dxil  PositionColorTransform.vert.dxil  Skybox.frag.dxil  Skybox.vert.dxil  SpriteBatch.comp.dxil  TexturedQuad.comp.dxil  TexturedQuad.frag.dxil  TexturedQuad.vert.dxil  TexturedQuadArray.frag.dxil  TexturedQuadColorWithMatrix.vert.dxil  TexturedQuadWithMatrix.vert.dxil  TexturedQuadWithMultiplyColor.frag.dxil  ToneMapACES.comp.dxil  ToneMapExtendedReinhardLuminance.comp.dxil  ToneMapHable.comp.dxil  ToneMapReinhard.comp.dxil
content/shaders/compiled/json/: CustomSampling.frag.json  SpriteBatch.comp.json  TexturedQuad.comp.json
content/shaders/compiled/spv/: SpriteBatch.comp.spv
examples/: basic_triangle.rs  pull_sprite_batch.rs
src/: common.rs  lib.rs  main.rs
