[package]
name = "sdl3-experiment"
version = "0.1.0"
edition = "2021"
default-run = "sdl3-experiment"

[dependencies]
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"

[dependencies.sdl3-sys]
git = "https://github.com/maia-s/sdl3-sys-rs"
branch = "main"
features = ["build-from-source-static"]

[dependencies.sdl3-main]
git = "https://github.com/maia-s/sdl3-sys-rs"
branch = "main"
