[package]
name = "sdl3-experiment"
version = "0.1.0"
edition = "2021"
default-run = "sdl3-experiment"

[dependencies]
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"

[dependencies.sdl3-sys]
git = "https://github.com/maia-s/sdl3-sys-rs"
tag = "sdl3-sys-v0.5.0"

[dependencies.sdl3-main]
git = "https://github.com/maia-s/sdl3-sys-rs"
tag = "sdl3-sys-v0.5.0"
